fixing modal zoom on mobileversion

--- a/frontend/src/assets/components/Modal.css
+++ b/frontend/src/assets/components/Modal.css
@@ -22,6 +22,9 @@
   overflow-y: auto;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.7);
   margin: 2rem;
+  
+  transform: none !important;
+  zoom: 1;
 }
 
 /* close button */
